# todo-app

./: .gitignore  CLAUDE.md  README.md  TESTING_GUIDE.md  main.py  pyproject.toml  requirements.txt  test_all_features.py
.claude/subagents/: README.md  spec-generator.md
.specify/memory/: constitution.md
history/prompts/001-add-task/: 0000-specification-for-add-task-feature.spec.prompt.md  0001-git-commit-and-pr-for-add-task-spec.spec.prompt.md  0001-implementation-planning-for-add-task.plan.prompt.md  0002-git-commit-and-push-planning-artifacts.misc.prompt.md  0003-generate-implementation-tasks-for-add-task-feature.tasks.prompt.md  0004-commit-and-update-pr-add-task.green.prompt.md  0004-commit-and-update-pr-for-task-generation.misc.prompt.md
history/prompts/003-update-task/: 0003-generate-update-task-tasks.tasks.prompt.md  (+7 more)
specs/001-add-task/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-delete-task/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-update-task/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-view-task/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-mark-complete/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/cli/: __init__.py  task_cli.py
src/models/: __init__.py  task.py
src/utils/: __init__.py  validators.py
tests/integration/: test_add_task_flow.py  test_delete_task_flow.py
tests/unit/: test_delete_cli.py  test_task_model.py  test_validators.py
(+44 files in other folders)
